# opencl

./: .gitignore  CMakeLists.txt  README.md  clMain.cl  clMain.cpp
util/: chrono  iostream  stdUtil.hpp  time_diff.h
